--- a/frontend/template/test.html
+++ b/frontend/template/test.html
@@ -22,6 +22,7 @@
             </select>
         </form>
         {% endfor %}
+        <input type = "submit" value = "submit" />
     {% endif %}
 </body>
 </html>
